2005-03-17  Sushma Rai  <rsushma@novell.com>

	* exchange-account-setup.c (exchange_authtype_changed): Setting the 
	authentication mechanism to both transport and source urls.

2005-03-05  Sushma Rai  <rsushma@novell.com>

	* org-gnome-exchange-account-setup.eplug.in: Added the commit function
	to save OOF data. This got missed in the previous commit. Also removed 
	duplicate accountWizard definition.

2005-02-28  JP Rosevear  <jpr@novell.com>

	* org-gnome-exchange-account-setup.eplug.in: add account wizard item

2005-02-27  Sushma Rai  <rsushma@novell.com>

	* exchange-account-setup.c (org_gnome_exchange_settings): Storing the 
	oof data enterted by user to a file, displaying the existing data on
	this page.
	(toggled_state): Signal hander for radiobutton, that sets the oof state.
	(update_state): Signal handler that reads the oof message entered. 
	(org_gnome_exchange_commit): Stores the oof data and does cleanup.
	(store_oof_info): Checks for the oof information file, writes the 
	oof state and message to the file. 
	(destroy_oof_data): Frees OOFData. 
	
2005-02-26  Sushma Rai  <rsushma@novell.com>

        * exchange-account-setup.c (org_gnome_exchange_check_options):
        Returning FALSE on NULL host name or set to "" for receive page, 
	so that one can proceed with the account creation only after 
	hostname is retrived and set by validate().

2005-02-24  Björn Torkelsson  <torkel@acc.umu.se>

	* org-gnome-exchange-account-setup.eplug.in: Added author and
	fixed description.
	
2005-02-21  Not Zed  <NotZed@Ximian.com>

	* exchange-account-setup.c (org_gnome_exchange_owa_url): if the
	host is null in the url, set it to "", so it has a non-null value.

2005-02-07  Sushma Rai  <rsushma@novell.com>
	
	* org-gnome-exchange-account-setup.eplug.in: Added plugin for adding 
	auth type section to editor.

	* exchange-account-setup.c (org_gnome_exchange_auth_section): Adding
	and handling authentication type for exchange account. 
